--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "prettier": "^2.8.8",
     "sass": "^1.61.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
 }
+
