--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "dev": "vite",
     "serve": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "publish": "node publish.js"
   },
   "devDependencies": {
+    "@types/node": "^20.2.5",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.8",
     "sass": "^1.61.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
 }
-
