--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "serve": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "publish": "node publish.js"
+  
+    "publish": "node publish.cjs"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
